:rocket: Add Message type #5

--- a/unknown_shortcodes.json
+++ b/unknown_shortcodes.json
@@ -1,5 +1,47 @@
 {
   "10": "",
   "11": "",
-  "34": ""
+  "34": "",
+  "woman-bowing": "",
+  "man-bowing": "",
+  "expressionless": "",
+  "sob": "",
+  "+1": "",
+  "shinto_shrine": "",
+  "pray": "",
+  "rooster": "",
+  "bamboo": "",
+  "cow2": "",
+  "bow": "",
+  "sunny": "",
+  "point_up_2": "",
+  "blush": "",
+  "nerd_face": "",
+  "handshake": "",
+  "relaxed": "",
+  "raised_hands": "",
+  "flushed": "",
+  "thinking_face": "",
+  "rice_ball": "",
+  "cold_face": "",
+  "innocent": "",
+  "tada": "",
+  "turtle": "",
+  "cry": "",
+  "upside_down_face": "",
+  "relieved": "",
+  "wink": "",
+  "sunrise": "",
+  "anatomical_heart": "",
+  "saluting_face": "",
+  "face_with_monocle": "",
+  "face_with_peeking_eye": "",
+  "dog": "",
+  "large_yellow_circle": "",
+  "slightly_smiling_face": "",
+  "arrow_up_down": "",
+  "tanabata_tree": "",
+  "joy": "",
+  "earth_asia": "",
+  "beginner": ""
 }
